--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ addons:
             - php5-mysql
             - php5-dev
             - php5-cli
-            - php-pgsql
+            - php5-pgsql
             - libapache2-mod-php5
 
 
