--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: php
 
 php:
-    - 5.6
+    #- 5.6
     - 7.0
-    - 7.1
-    - nightly
+    #- 7.1
+    #- nightly
 
 services:
     - redis
+    - postgresql
 
 env:
     - DB=mariadb
@@ -20,8 +21,8 @@ group: edge
 addons:
     mariadb:
         - '10.0'
-    postgresql: 
-        - "9.2"
+    #postgresql: 
+    #    - "9.2"
     hosts:
         - misp.local
         - localhost
@@ -160,7 +161,7 @@ after_failure:
 notifications:
   webhooks:
     urls:
-      - https://webhooks.gitter.im/e/05e30284086a8e948d31
+      #- https://webhooks.gitter.im/e/05e30284086a8e948d31
     on_success: change  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: never     # options: [always|never|change] default: always
